<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/ivMovieBackDropDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/continerHeaderDescription" />

    <LinearLayout
        android:id="@+id/continerHeaderDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:translationY="-75dp"

        app:layout_constraintTop_toBottomOf="@id/ivMovieBackDropDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvOverviewMovieDescription">

        <TextView
            android:id="@+id/tvTitleMovieDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/loadContent"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="bottom" />

        <ImageView
            android:id="@+id/imPosterDescription"
            android:layout_width="125dp"
            android:layout_height="180dp"
            android:layout_gravity="right"
            android:translationX="-25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvOverviewMovieDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/loadContent"
        android:textColor="@color/text_light_blue"
        android:textSize="17sp"
        android:layout_marginHorizontal="10dp"

        app:layout_constraintTop_toBottomOf="@id/continerHeaderDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/text_bg_blue"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"

        app:layout_constraintTop_toBottomOf="@id/tvOverviewMovieDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionMovie"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/releaseDateMovie"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvReleaseDateDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/loadContent"
                android:textSize="16sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/languageMovie"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvLanguageDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/loadContent"
                android:textSize="16sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/popularityMovie"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvPopularityDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/loadContent"
                android:textSize="16sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/voteMovie"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvVoteAverageDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/loadContent"
                android:textSize="16sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/genresMovie"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvGenresDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/loadContent"
                android:textSize="16sp"
                android:gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/durationMovie"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDurationDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/loadContent"
                android:textSize="16sp"
                android:gravity="end" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>